--- a/src/template/ejs/index.ejs
+++ b/src/template/ejs/index.ejs
@@ -3,18 +3,7 @@
 <%- include('block/head') %>
 
 <body class="page">
-    <div id="fullpage">
-        <%- include('block/face') %>
-        <footer class="section section_footer fp-auto-height">
-            <div class="container">
-                <span>BERNADATTE LTD, Av Ricardo J. Alfaro, Panama International</span>
-                <br>
-                <a href="/cdn/files/Privacy Policy.html" target="_blank">Privacy Policy</a> |
-                <a href="http://feedback-team.com" target="_blank">Report</a>
-            </div>
-        </footer>
-    </div>
-    <%- include('block/script') %>
+    <%- include('block/scripts') %>
 </body>
 
 </html>
