--- a/src/sass/core/base.scss
+++ b/src/sass/core/base.scss
@@ -34,12 +34,16 @@ html {
 
 body {
   min-width: 320px;
-  font-family: "Codec-Cold", sans-serif;
+  font-family: sans-serif;
   font-weight: 300;
   font-size: 16px;
   line-height: 1.2;
   color: #000;
   background-color: #fff;
+
+  &.overflow {
+    overflow: hidden;
+  }
 }
 
 article,
