--- a/src/sass/core/btn.scss
+++ b/src/sass/core/btn.scss
@@ -5,15 +5,16 @@
     position: relative;
     z-index: 1;
     display: inline-block;
-    padding: 25px 46px;
-    color: #000;
+    padding: 15px 40px;
+    color: #fff;
     text-align: center;
     cursor: pointer;
-    background-color: transparent;
+    background-color: #ffa500;
     transition: 0.3s;
 
     &:hover {
         color: #000;
+        background-color: #ffeb00;
         text-decoration: none;
     }
 }
