--- a/src/sass/core/fonts.scss
+++ b/src/sass/core/fonts.scss
@@ -1,54 +1,25 @@
 /* stylelint-disable */
 
-@font-face {
-  font-family: 'Codec-Cold';
-  src: url('../fonts/Codec-Cold/CodecCold-ExtraBold.woff2') format('woff2'),
-    url('../fonts/Codec-Cold/CodecCold-ExtraBold.woff') format('woff');
-  font-weight: 800;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Alice';
+//   src: url('../fonts/Alice/Alice-Regular.woff2') format('woff2'),
+//     url('../fonts/Alice/Alice-Regular.woff') format('woff');
+//   font-weight: 400;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Codec-Cold';
-  src: url('../fonts/Codec-Cold/CodecCold-Bold.woff2') format('woff2'),
-    url('../fonts/Codec-Cold/CodecCold-Bold.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'AmaticSC';
+//   src: url('../fonts/AmaticSC/AmaticSC-Regular.woff2') format('woff2'),
+//     url('../fonts/AmaticSC/AmaticSC-Regular.woff') format('woff');
+//   font-weight: 400;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Codec-Cold';
-  src: url('../fonts/Codec-Cold/CodecCold-News.woff2') format('woff2'),
-    url('../fonts/Codec-Cold/CodecCold-News.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Codec-Cold';
-  src: url('../fonts/Codec-Cold/CodecCold-Regular.woff2') format('woff2'),
-    url('../fonts/Codec-Cold/CodecCold-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url("../fonts/Montserrat/Montserrat-Regular.woff2") format("woff2"), url("../fonts/Montserrat/Montserrat-Regular.woff") format("woff");
-  font-style: normal;
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url("../fonts/Montserrat/Montserrat-Medium.woff2") format("woff2"), url("../fonts/Montserrat/Montserrat-Medium.woff") format("woff");
-  font-style: normal;
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url("../fonts/Montserrat/Montserrat-SemiBold.woff2") format("woff2"), url("../fonts/Montserrat/Montserrat-SemiBold.woff") format("woff");
-  font-style: normal;
-  font-weight: 600;
-}
+// @font-face {
+//   font-family: 'AmaticSC';
+//   src: url('../fonts/AmaticSC/AmaticSC-Bold.woff2') format('woff2'),
+//     url('../fonts/AmaticSC/AmaticSC-Bold.woff') format('woff');
+//   font-weight: 700;
+//   font-style: normal;
+// }
