--- a/src/template/ejs/index.ejs
+++ b/src/template/ejs/index.ejs
@@ -3,6 +3,8 @@
 <%- include('block/head') %>
 
 <body class="page">
+    <%- include('block/face') %>
+    <%- include('block/footer') %>
     <%- include('block/scripts') %>
 </body>
 
