верстка блока uslugi(еще не закончил)

--- a/src/template/ejs/block/footer.ejs
+++ b/src/template/ejs/block/footer.ejs
@@ -25,6 +25,9 @@
                     <div class="footer__field">
                         <textarea placeholder="Сообщение..."></textarea>
                     </div>
+                    <div class="footer__field">
+                        <button>Отправить</button>
+                    </div>
                 </form>
             </div>
         </div>
