--- a/src/sass/block/face.scss
+++ b/src/sass/block/face.scss
@@ -4,6 +4,7 @@
     background-color: #000;
     background-image: url("../media/face/bg.jpg");
     background-repeat: no-repeat;
+    background-position: center top;
     background-size: cover;
 }
 
