--- a/src/sass/block/footer.scss
+++ b/src/sass/block/footer.scss
@@ -64,14 +64,35 @@
 }
 
 .footer__field {
+    text-align: left;
+
     & + & {
         margin-top: 10px;
+    }
+
+    & button {
+        padding: 5px 20px;
+        font-size: 14px;
+        color: #d6d6d6;
+        background-color: #1d1d1d;
+        border: 1px solid rgba(214, 214, 214, 0.06);
+
+        &:focus {
+            border-color: #fff;
+            outline: 0;
+        }
+
+        &:hover {
+            border-color: rgba(255, 255, 255, 0.58);
+            outline: 0;
+        }
     }
 
     & input,
     & textarea {
         width: 100%;
         padding: 5px;
+        font-size: 14px;
         color: #d6d6d6;
         resize: none;
         background-color: #1d1d1d;
