--- a/src/template/ejs/block/head.ejs
+++ b/src/template/ejs/block/head.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Suganorm</title>
+    <title>Cycyrbita</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <!-- Карточка для соцсетей -->
@@ -15,20 +15,20 @@
     <meta name="twitter:description" content="Сахарный диабет — один из самых распространенных и коварных недугов.">
 
     <!-- Заголовок страницы, который будет выводится в записи социальной сети -->
-    <meta property="og:title" content="Ваша лучшая жизнь без диабета">
-    <meta name="twitter:title" content="Ваша лучшая жизнь без диабета">
+    <meta property="og:title" content="Cycyrbita">
+    <meta name="twitter:title" content="Cycyrbita">
 
     <!-- Ключевые слова страницы  -->
-    <meta name="keywords" content="Suganorm">
+    <meta name="keywords" content="Cycyrbita">
 
     <!-- Отключает формирование ссылки у номера телефона на iOS -->
     <meta name="format-detection" content="telephone=no">
 
     <!-- Тип карты, по умолчанию используется summary -->
-    <meta name="twitter:card" content="Suganorm">
+    <meta name="twitter:card" content="Cycyrbita">
 
     <!-- Название сайта -->
-    <meta property="og:site_name" content="Suganorm">
+    <meta property="og:site_name" content="Cycyrbita">
 
     <!-- Favicon -->
     <link sizes="16x16" rel="shortcut icon" type="image/png" href="../media/favicon/favicon-16x16.png">
@@ -37,7 +37,7 @@
     <link sizes="180x180" rel="apple-touch-icon" href="../media/favicon/apple-touch-icon-180x180.png">
 
     <!-- Кто принимал участие над разработкой данного сайта -->
-    <meta name="Author" content="Suganorm">
+    <meta name="Author" content="Cycyrbita">
 
     <link rel="stylesheet" href="../css/style.css?{version: 1}">
 </head>
