--- a/src/template/ejs/block/head.ejs
+++ b/src/template/ejs/block/head.ejs
@@ -10,9 +10,9 @@
     <meta name="twitter:image" content="../media/share/image.jpg">
 
     <!-- Краткое описание страницы  -->
-    <meta name="description" content="Сахарный диабет — один из самых распространенных и коварных недугов.">
-    <meta property="og:description" content="Сахарный диабет — один из самых распространенных и коварных недугов.">
-    <meta name="twitter:description" content="Сахарный диабет — один из самых распространенных и коварных недугов.">
+    <meta name="description" content="Cycyrbita">
+    <meta property="og:description" content="Cycyrbita">
+    <meta name="twitter:description" content="Cycyrbita">
 
     <!-- Заголовок страницы, который будет выводится в записи социальной сети -->
     <meta property="og:title" content="Cycyrbita">
