--- a/src/sass/block/nav.scss
+++ b/src/sass/block/nav.scss
@@ -1,9 +1,10 @@
 
 .nav__menu {
     display: flex;
+    list-style-type: none;
 }
 
-.nav__link {
+.nav__menu a {
     display: inline-block;
     padding: 10px;
     color: #d6d6d6;
