--- a/src/template/ejs/block/footer.ejs
+++ b/src/template/ejs/block/footer.ejs
@@ -11,10 +11,12 @@
             </div>
             <div class="footer__list">
                 <div class="footer__subtitle">Посетителям</div>
-                <div class="footer__item"><a href="">Главная</a></div>
-                <div class="footer__item"><a href="">О нас</a></div>
-                <div class="footer__item"><a href="">Наша команда</a></div>
-                <div class="footer__item"><a href="">База знаний</a></div>
+                <ul class="footer__ul">
+                    <li><a href="">Главная</a></li>
+                    <li><a href="">О нас</a></li>
+                    <li><a href="">Наша команда</a></li>
+                    <li><a href="">База знаний</a></li>
+                </ul>
             </div>
             <div class="footer__list">
                 <div class="footer__subtitle">Напиши нам</div>
