--- a/src/template/ejs/index.ejs
+++ b/src/template/ejs/index.ejs
@@ -4,7 +4,7 @@
 
 <body class="page">
     <%- include('block/face') %>
-    <%- include('block/uslugi') %>
+    <%- include('block/home') %>
     <%- include('block/footer') %>
     <%- include('block/scripts') %>
 </body>
