--- a/src/sass/block/footer.scss
+++ b/src/sass/block/footer.scss
@@ -63,6 +63,25 @@
     }
 }
 
+.footer__ul > li {
+    font-size: 14px;
+    color: #d6d6d6;
+    list-style-type: none;
+
+    & a {
+        display: inline-block;
+        padding: 5px 0 2px;
+        color: inherit;
+        text-decoration: none;
+        border-bottom: 1px solid rgba(214, 214, 214, 0.06);
+
+        &:hover {
+            color: #fff;
+            border-color: rgba(255, 255, 255, 0.58);
+        }
+    }
+}
+
 .footer__field {
     text-align: left;
 
