блок cycyrbita готов

--- a/src/sass/block/footer.scss
+++ b/src/sass/block/footer.scss
@@ -1,7 +1,5 @@
 .footer {
-    padding-top: 60px;
-    padding-bottom: 30px;
-    background-color: #1d1d1d;
+    border-top: 1px solid #3a3a3a;
 }
 
 .footer__body {
