--- a/src/template/ejs/block/cycyrbita.ejs
+++ b/src/template/ejs/block/cycyrbita.ejs
@@ -1,44 +1,46 @@
 <div class="cycyrbita">
-    <div class="cycyrbita__box">
-        <div class="cycyrbita__media">
-            <img src="../media/cycyrbita/face.png" alt="">
+    <div class="cycyrbita__body">
+        <div class="cycyrbita__face">
+            <div class="cycyrbita__media">
+                <img src="../media/cycyrbita/cycyrbita.jpg" alt="">
+            </div>
+            <div class="cycyrbita__name">Signora Cycyrbita <span>Все на свете фигня, кроме пчел.</span></div>
         </div>
-        <div class="cycyrbita__name">Signora Cycyrbita</div>
+        <div class="cycyrbita__info">
+            <h2 class="cycyrbita__title">Привет cycyrbit</h2>
+            <div class="cycyrbita__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt minus praesentium exercitationem ad repellendus doloremque eius obcaecati eveniet, sunt, sequi quibusdam at quasi ipsam. Et, molestias adipisci? Iure sunt, minus ipsa deleniti suscipit officiis enim voluptate odit asperiores quos placeat rerum exercitationem necessitatibus, consequuntur minima. Saepe quaerat, numquam dolorum perspiciatis magni nulla sed voluptatum reiciendis soluta harum. Distinctio in explicabo aspernatur temporibus quasi maxime veniam tempore aliquid doloremque laboriosam fugit iste, quae eos pariatur eligendi officiis sit repudiandae praesentium sequi. Consectetur quia mollitia voluptatibus unde animi corporis et, sapiente sunt veritatis id neque autem, illo rem temporibus ex ratione soluta!</div>
+        </div>
     </div>
-    <div class="cycyrbita__box">
-        <div class="cycyrbita__title">Привет человек</div>
-        <div class="cycyrbita__ description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio illum doloremque eligendi inventore reprehenderit explicabo tempora deserunt, dolore blanditiis.</div>
-        <div class="cycyrbita__slider">
-            <div class="cycyrbita__item">
-                <div class="cycyrbita__slider-img">
-                    <img src="../media/cycyrbita/img-1.jpg" alt="">
-                </div>
-                <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+    <div class="cycyrbita__slider owl-carousel js-cycyrbita__slider">
+        <div class="cycyrbita__item">
+            <div class="cycyrbita__slider-img">
+                <img src="../media/cycyrbita/slide-1.jpg" alt="">
             </div>
-            <div class="cycyrbita__item">
-                <div class="cycyrbita__slider-img">
-                    <img src="../media/cycyrbita/img-2.jpg" alt="">
-                </div>
-                <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+            <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="cycyrbita__item">
+            <div class="cycyrbita__slider-img">
+                <img src="../media/cycyrbita/slide-2.jpg" alt="">
             </div>
-            <div class="cycyrbita__item">
-                <div class="cycyrbita__slider-img">
-                    <img src="../media/cycyrbita/img-3.jpg" alt="">
-                </div>
-                <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+            <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="cycyrbita__item">
+            <div class="cycyrbita__slider-img">
+                <img src="../media/cycyrbita/slide-3.jpg" alt="">
             </div>
-            <div class="cycyrbita__item">
-                <div class="cycyrbita__slider-img">
-                    <img src="../media/cycyrbita/img-4.jpg" alt="">
-                </div>
-                <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+            <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="cycyrbita__item">
+            <div class="cycyrbita__slider-img">
+                <img src="../media/cycyrbita/slide-4.jpg" alt="">
             </div>
-            <div class="cycyrbita__item">
-                <div class="cycyrbita__slider-img">
-                    <img src="../media/cycyrbita/img-5.jpg" alt="">
-                </div>
-                <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+            <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="cycyrbita__item">
+            <div class="cycyrbita__slider-img">
+                <img src="../media/cycyrbita/slide-5.jpg" alt="">
             </div>
+            <div class="cycyrbita__slider-info">Lorem ipsum dolor sit amet.</div>
         </div>
     </div>
 </div>
