--- a/src/template/ejs/block/face.ejs
+++ b/src/template/ejs/block/face.ejs
@@ -1,5 +1,5 @@
 
-<div class="face">
+<section class="section section_face face">
     <div class="container">
         <%- include('header') %>
         <div class="face__body">
@@ -8,4 +8,4 @@
             <div class="face__btn btn">Наши работы</div>
         </div>
     </div>
-</div>
+</section>
