--- a/src/sass/block/face.scss
+++ b/src/sass/block/face.scss
@@ -1,16 +1,6 @@
 
-.face {
-    position: relative;
-    background-color: #000;
-    background-image: url("../media/face/bg.jpg");
-    background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover;
-}
-
 .face__body {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    margin-top: 100px;
 }
 
 .face__title {
@@ -35,7 +25,6 @@
     }
 
     .face__body {
-        padding-top: 50px;
-        padding-bottom: 80px;
+        margin-top: 50px;
     }
 }
