--- a/src/sass/block/nav.scss
+++ b/src/sass/block/nav.scss
@@ -25,6 +25,7 @@
     position: fixed;
     top: 5px;
     right: 5px;
+    z-index: 15;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -69,6 +70,7 @@
         top: 0;
         right: 0;
         bottom: 0;
+        z-index: 10;
         flex-direction: column;
         padding: 70px 25px 25px 25px;
         background-color: #000;
