--- a/src/template/ejs/block/footer.ejs
+++ b/src/template/ejs/block/footer.ejs
@@ -1,5 +1,5 @@
 
-<footer class="footer">
+<footer class="footer section section_footer">
     <div class="container">
         <div class="footer__body">
             <div class="footer__list">
