--- a/src/template/ejs/index.ejs
+++ b/src/template/ejs/index.ejs
@@ -5,6 +5,7 @@
 <body class="page">
     <%- include('block/face') %>
     <%- include('block/home') %>
+    <%- include('block/team') %>
     <%- include('block/footer') %>
     <%- include('block/scripts') %>
 </body>
