--- a/src/template/ejs/block/cycyrbita.ejs
+++ b/src/template/ejs/block/cycyrbita.ejs
@@ -7,7 +7,7 @@
             <div class="cycyrbita__name">Signora Cycyrbita <span>Все на свете фигня, кроме пчел.</span></div>
         </div>
         <div class="cycyrbita__info">
-            <h2 class="cycyrbita__title">Привет cycyrbit</h2>
+            <h2 class="section__title cycyrbita__title">Привет cycyrbit</h2>
             <div class="cycyrbita__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt minus praesentium exercitationem ad repellendus doloremque eius obcaecati eveniet, sunt, sequi quibusdam at quasi ipsam. Et, molestias adipisci? Iure sunt, minus ipsa deleniti suscipit officiis enim voluptate odit asperiores quos placeat rerum exercitationem necessitatibus, consequuntur minima. Saepe quaerat, numquam dolorum perspiciatis magni nulla sed voluptatum reiciendis soluta harum. Distinctio in explicabo aspernatur temporibus quasi maxime veniam tempore aliquid doloremque laboriosam fugit iste, quae eos pariatur eligendi officiis sit repudiandae praesentium sequi. Consectetur quia mollitia voluptatibus unde animi corporis et, sapiente sunt veritatis id neque autem, illo rem temporibus ex ratione soluta!</div>
         </div>
     </div>
