--- a/src/template/ejs/block/team.ejs
+++ b/src/template/ejs/block/team.ejs
@@ -1,5 +1,5 @@
 
-<section class="footer section section_team">
+<section class="section section_team">
     <div class="container">
         
     </div>
