--- a/src/template/ejs/index.ejs
+++ b/src/template/ejs/index.ejs
@@ -5,7 +5,8 @@
 <body class="page">
     <%- include('block/face') %>
     <%- include('block/home') %>
-    <%- include('block/team') %>
+    <!-- <%- include('block/team') %> -->
+    <%- include('block/base') %>
     <%- include('block/footer') %>
     <%- include('block/scripts') %>
 </body>
