--- a/src/sass/block/base.scss
+++ b/src/sass/block/base.scss
@@ -44,6 +44,10 @@
         content: '';
         background-color: #3a3a3a;
     }
+
+    & img {
+        height: auto !important;
+    }
 }
 
 .base__description {
@@ -60,6 +64,8 @@
     font-size: 14px;
     cursor: pointer;
     transition: 0.3s;
+    color: #fff;
+    text-decoration: none;
 
     &:hover {
         color: #000;
