--- a/src/template/ejs/index.ejs
+++ b/src/template/ejs/index.ejs
@@ -7,6 +7,7 @@
     <%- include('block/home') %>
     <!-- <%- include('block/team') %> -->
     <%- include('block/base') %>
+    <%- include('block/avatars') %>
     <%- include('block/footer') %>
     <%- include('block/scripts') %>
 </body>
